--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "express-handlebars": "^7.1.3",
     "express-paginate": "^1.0.2",
     "express-session": "^1.18.0",
