fixed: working with lots images functional

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 JWT_KEY="z3rz3albs5b7"
-IMAGES_PATH="public/images/vehicles"
-IMAGES_URL="http://localhost:3000/images/vehicles"
+IMAGES_PATH="public/images"
+IMAGES_URL="http://localhost:3000/images"
 PORT=3000
